--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ckeditor4-angular": "^2.2.0",
     "ckeditor4-integrations-common": "^0.2.0",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "ng-zorro-antd": "^11.4.1",
     "ng2-ckeditor": "^1.3.3",
